--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -66,17 +66,12 @@ box-shadow:
 
 
 .active-nav::after{
-
     content:"";
-
     position:absolute;
-
     left:0;
+    right:0;
     bottom:-8px;
-
-    width:100%;
     height:2px;
-
     background:
             linear-gradient(
                     90deg,
